OSD: Remove shard lock that mClockScheduler use when updating conf

When mClockScheduler uses bench to determine conf. values a deadlock
can occur if the update scheduler config run during consume_map already started.

Fixes: https://tracker.ceph.com/issues/57699
Signed-off-by: Nitzan Mordechai <nmordec@redhat.com>
(cherry picked from commit 6450dae40120b0e3d9e46b4561b8212ef330470a)